tests/type/errors/bad_add2.typedsol
2:15 error: Mismatched types for binary operator